[gd_scene load_steps=17 format=3 uid="uid://dewgjpt1wbtm4"]

[ext_resource type="Script" uid="uid://cigsncue0fg5s" path="res://Scripts/uiScript/control.gd" id="1_nufsr"]
[ext_resource type="Material" uid="uid://dreh33v4icnaj" path="res://assets/shaders/basicShaderMat.tres" id="1_qvd58"]
[ext_resource type="Texture2D" uid="uid://bvdhw15b1h4x" path="res://assets/img/Ui/Floor beat.png" id="2_7hqfr"]
[ext_resource type="FontFile" uid="uid://niw013swj2th" path="res://assets/Bauhaus 93 Regular.ttf" id="3_cilar"]
[ext_resource type="Shader" uid="uid://vuar85e1xgyh" path="res://assets/shaders/floorBeatShader.gdshader" id="3_oj8hp"]
[ext_resource type="Texture2D" uid="uid://c58b0mkfqtmpe" path="res://assets/img/grayNoise.png" id="6_sdlxc"]
[ext_resource type="Shader" uid="uid://dj4rx4p7yo3jk" path="res://assets/shaders/blackScreen.gdshader" id="6_vtmv6"]
[ext_resource type="Texture2D" uid="uid://cq3csjmirjlm5" path="res://assets/img/Ui/blueTop.png" id="7_fvpjl"]
[ext_resource type="Texture2D" uid="uid://dfa0dje3erdk3" path="res://assets/img/Ui/redTop.png" id="8_irgif"]
[ext_resource type="Texture2D" uid="uid://dnhycb8qr2y24" path="res://assets/img/Ui/yelTop.png" id="9_6d7n1"]
[ext_resource type="Texture2D" uid="uid://dmqfnbhfxe1vb" path="res://assets/img/Ui/pts.png" id="9_wbnar"]
[ext_resource type="Texture2D" uid="uid://dr28foaiuiwx5" path="res://assets/img/Ui/Combo.png" id="10_fvpjl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_502jd"]
shader = ExtResource("3_oj8hp")

[sub_resource type="Curve2D" id="Curve2D_thuov"]
_data = {
"points": PackedVector2Array(-38.9318, 85.4074, 38.9318, -85.4074, 145, 954, -4.55642, -24.3593, 4.55642, 24.3593, 240, 951, 51.5365, 0.931382, -51.5365, -0.931382, 189, 1019, 0, 0, 0, 0, 145, 954)
}
point_count = 4

[sub_resource type="SpriteFrames" id="SpriteFrames_y1o7g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_fvpjl")
}, {
"duration": 1.0,
"texture": ExtResource("8_irgif")
}, {
"duration": 1.0,
"texture": ExtResource("9_6d7n1")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cilar"]
shader = ExtResource("6_vtmv6")
shader_parameter/myColor = Color(0, 0, 0, 1)
shader_parameter/myOpaq = 0.0

[node name="mainUI" type="Control"]
z_as_relative = false
material = ExtResource("1_qvd58")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nufsr")

[node name="resp" type="Label" parent="."]
modulate = Color(0.926299, 2.5028e-06, 1.54018e-06, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -200.0
offset_right = -76.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.5, 3.5)
text = "You Died!
(Press Space)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmAm" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 53.0
offset_top = -143.0
offset_right = 287.0
offset_bottom = -63.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_cilar")
theme_override_font_sizes/font_size = 70
text = "Ammo: "

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -146.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "         0"
horizontal_alignment = 2

[node name="FloorBeat" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_502jd")
position = Vector2(-1613, 245)
scale = Vector2(1.2, 1)
texture = ExtResource("2_7hqfr")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(103, 124)
scale = Vector2(0.9, 0.9)
curve = SubResource("Curve2D_thuov")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(145, 954)
progress = 326.377
rotates = false

[node name="funTxt" type="AnimatedSprite2D" parent="Path2D/PathFollow2D"]
visible = false
sprite_frames = SubResource("SpriteFrames_y1o7g")
frame_progress = 0.413105

[node name="score" type="Sprite2D" parent="."]
position = Vector2(1747, 68)
texture = ExtResource("9_wbnar")

[node name="ComboCont" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 2127.0
offset_top = 69.0
offset_right = 2150.0
offset_bottom = 182.0
theme_override_constants/separation = 6
alignment = 1

[node name="combo" type="Sprite2D" parent="ComboCont"]
position = Vector2(-90, 50)
texture = ExtResource("10_fvpjl")

[node name="mult" type="Label" parent="ComboCont"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "1"

[node name="blackScreen" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cilar")
position = Vector2(959.875, 540.125)
scale = Vector2(0.937622, 0.527222)
texture = ExtResource("6_sdlxc")

[connection signal="animation_finished" from="Path2D/PathFollow2D/funTxt" to="." method="_on_fun_txt_animation_finished"]
